--- a/MyProjectJavaWeb/web/index.html
+++ b/MyProjectJavaWeb/web/index.html
@@ -9,8 +9,41 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/bootstrap.min.css" rel="stylesheet"/>
+
+        <style>
+            .primary-nav {
+                font-family: "Moderat","Helvetica Neue",Helvetica,Arial,sans-serif;
+                font-weight: normal;
+                font-style: normal;
+                font-size: 1.0625rem;
+                line-height: 1.5652;
+                letter-spacing: .075em;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header> 
+            <nav class="nav navbar-default">
+                <div class="container-fluid ">
+                    <div class="navbar-header">
+                        <a class="navbar-brand">JwShop</a>    
+                    </div> 
+                    <ul class="nav navbar-nav primary-nav">
+                        <li class="active">
+                            <a>Home</a>
+                        </li>
+                        <li><a href="#">Page 1</a></li>
+                        <li><a href="#">Page 2</a></li>
+                        <li><a href="#">Page 3</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
     </body>
 </html>
