--- a/MyProjectJavaWeb/web/index.html
+++ b/MyProjectJavaWeb/web/index.html
@@ -65,18 +65,18 @@
                         </ul>
 
                         <div id="cd-login"> <!-- log in form -->
-                            <form class="cd-form">
+                            <form class="cd-form" action="NewServlet" method="post">
                                 <p class="fieldset">
                                     <label class="image-replace cd-email" for="signin-email">E-mail</label>
                                     <input class="full-width has-padding has-border" id="signin-email" type="email" placeholder="E-mail">
-                                    <!--<span class="cd-error-message">Error message here!</span>-->
+                                    <span class="cd-error-message">Error message here!</span>
                                 </p>
 
                                 <p class="fieldset">
                                     <label class="image-replace cd-password" for="signin-password">Password</label>
                                     <input class="full-width has-padding has-border" id="signin-password" type="text"  placeholder="Password">
                                     <a href="#0" class="hide-password">Hide</a>
-                                    <!--<span class="cd-error-message">Error message here!</span>-->
+                                    <span class="cd-error-message">Error message here!</span>
                                 </p>
 
                                 <p class="fieldset">
